# healthcare-data-inference-api

./: .dockerignore  Dockerfile  Modeling_dataset-1orignal_dataset_-Updated.ipynb  Modeling_dataset-2_New-_Without.ipynb  README.md  final_updated.ipynb  pyproject.toml  requirements.txt  test.py
Deployement on Heroku/: app.py  requirements.txt
deployment/: app.py  best_rf_model.sav  best_rf_model_jb.sav  fastapiapp.py  fastapiapp2.py  fastapiapp_1.py  fraud-detection-rf.py  test.csv
deployment/templates/: index.html
ml_api_poc/: Dockerfile  main.py  requirements.txt
ml_api_poc/app/: main.py
ml_api_poc/app/models/: best_rf_model_pkl.sav
ml_api_poc/app/utils/: utils.py
models/: scaler.pkl
notebooks/: fraud-detection-rf.ipynb
src/: main.py
src/utils/: utils.py
